feat: support startingIndex for block tagging and retry accounting
- Add startingIndex/totalBlocksApplied to track global block numbering and
  build-retry context so retry messages and tagged blocks remain consistent
  across turns.